--- a/package.json
+++ b/package.json
@@ -23,14 +23,16 @@
   },
   "homepage": "https://github.com/Rengo15/nodeServer#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "helmet": "^4.5.0"
+  },
+  "devDependencies": {
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
     "nodemon": "^2.0.7",
     "webpack": "^5.35.1",
     "webpack-cli": "^4.6.0",
